--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="item-buttons">
                             <button class="item-button rollable" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
-                                    title="{{item.data.attackLabel}}">{{item.data.attackLabel}}</button>
+                                    title="{{localize 'MB.Attack'}}">{{localize 'MB.Attack'}}</button>
                         </div>
                         <div class="item-controls">
                             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
