--- a/templates/armor-sheet.html
+++ b/templates/armor-sheet.html
@@ -30,6 +30,10 @@
 
         {{!-- Details Tab --}}
         <div class="tab" data-group="primary" data-tab="details">
+            <div class="form-group">
+                <label>Equippable</label>
+                <input type="checkbox" name="data.equippable" data-dtype="Boolean" {{checked data.equippable}}>
+            </div> 
 
             {{!-- Price --}}
             <div class="form-group">
