Tweak attack/defend roll text.

--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -678,3 +678,6 @@ alternately we could select as
 .morkborg.sheet.actor .sheet-body .encumbered {
   color: #ffe500;
 }
+/*.morkborg.sheet.actor .sheet-body .equipment-tab .item-list {
+  columns: 2;
+}*/
